Bootstrap_html_css

--- a/Bootstrap-html/index.html
+++ b/Bootstrap-html/index.html
@@ -20,7 +20,16 @@
       <!-- <h1>Hello, world!</h1> -->
       <nav class="navbar navbar-expand-lg navbar-light">
         <div class="container">
-          <a class="navbar-brand" href="index.html"> Bootstrap Navbar </a>
+          <!-- <a class="navbar-brand" href="index.html"> Bootstrap Navbar </a> -->
+          <a class="navbar-brand" href="index.html">
+            <img
+              src="./images//jon-smith-title.svg"
+              height="40"
+              width="200"
+              alt="logo-image"
+            />
+            <span class="d-none">Bootstrap Navbar </span>
+          </a>
           <button
             class="navbar-toggler"
             type="button"
