--- a/Bootstrap-html/index.html
+++ b/Bootstrap-html/index.html
@@ -57,7 +57,20 @@
         </div>
       </nav>
     </div>
-    <h1>Hello, world!</h1>
+    <main>
+      <header style="background-image: url('./images/index-image.jpg')">
+        <div
+          class="color-overlay d-flex justify-content-center align-items-center"
+        >
+          <h1>Hello, world!</h1>
+        </div>
+      </header>
+      <div class="singleCol mx-auto my-5">
+        <div class="container">Test</div>
+      </div>
+    </main>
+
+    <!-- <h1>Hello, world!</h1> -->
     <!-- Optional JavaScript; choose one of the two! -->
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
